Initial commit of date based weather information diagrams.
